--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/react-select": "^3.0.5",
     "lodash-es": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "typescript": "~3.6.4"
   },
   "scripts": {
