--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash-es": "^4.17.15",
+    "react-select": "^3.0.8"
+  },
+  "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.5",
-    "lodash-es": "^4.17.15",
+    "http-proxy-middleware": "^0.20.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-select": "^3.0.8",
     "typescript": "~3.6.4"
+  },
+  "peerDependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
