--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-demo": "react-scripts build && scp -r build/* ubuntu@fe.int.petuum.com:/var/www/html/nlp-viewer"
+    "deploy-demo": "REACT_APP_IS_DEMO=true react-scripts build && scp -r build/* ubuntu@fe.int.petuum.com:/var/www/html/nlp-viewer"
   },
   "eslintConfig": {
     "extends": "react-app"
