--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "lodash-es": "^4.17.15",
+    "react-grid-layout": "^0.18.3",
     "react-select": "^3.0.8"
   },
   "devDependencies": {
@@ -12,8 +13,10 @@
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/react-grid-layout": "^0.17.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.5",
+    "@types/react-tabs": "^2.3.1",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
