--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-select": "^3.0.8"
   },
   "devDependencies": {
+    "@babel/helper-call-delegate": "^7.10.4",
     "@types/jest": "^24.0.18",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.7.12",
