ask all suggested event pairs at the same time, scroll into view, dynamic instructions and etc

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "highlightable": "^1.0.7",
     "lodash-es": "^4.17.15",
     "react-modal": "^3.11.2",
+    "react-progressbar": "^15.4.1",
     "react-select": "^3.0.8"
   },
   "devDependencies": {
