--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ yarn-error.log*
 venv
 simple-backend/db.sqlite3
 
-.python-version
+simple-backend/db.sqlite3
+simple-backend/db-example-old.sqlite3
+simple-backend/db-old.sqlite3
+.python-version*
 /.idea/
