--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/react-modal": "^3.10.5",
     "highlightable": "^1.0.7",
     "lodash-es": "^4.17.15",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-modal": "^3.11.2",
     "react-progressbar": "^15.4.1",
     "react-select": "^3.0.8"
