--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "lodash-es": "^4.17.15",
+    "react-dropzone": "^11.0.3",
     "react-select": "^3.0.8",
     "styled-components": "^5.1.1"
   },
