--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "lodash-es": "^4.17.15",
+    "node-forge": "0.10.0",
+    "object-path": "0.11.5",
     "react-dropzone": "^11.0.3",
+    "react-is": "^17.0.1",
     "react-select": "^3.0.8",
     "styled-components": "^5.1.1"
   },
