--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "jsoneditor": "^9.1.2",
     "lodash-es": "^4.17.15",
     "object-path": "0.11.5",
     "react-dropzone": "^11.0.3",
