Introduce eslint and gts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "object-path": "0.11.5",
     "react-dropzone": "^11.0.3",
     "react-is": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-select": "^3.0.8",
     "styled-components": "^5.1.1"
   },
@@ -16,18 +17,19 @@
     "@babel/helper-call-delegate": "^7.10.4",
     "@types/jest": "^24.0.18",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^12.7.12",
+    "@types/node": "^14.11.2",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^5.1.2",
+    "eslint": "^7.13.0",
+    "gts": "^3.0.2",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.4",
-    "typescript": "~3.6.4"
+    "react-scripts": "^4.0.0",
+    "typescript": "^4.0.3"
   },
   "peerDependencies": {
     "react": "^16.10.2",
@@ -38,7 +40,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-demo": "REACT_APP_IS_DEMO=true react-scripts build && scp -r build/* ubuntu@fe.int.petuum.com:/var/www/html/nlp-viewer"
+    "deploy-demo": "REACT_APP_IS_DEMO=true react-scripts build && scp -r build/* ubuntu@fe.int.petuum.com:/var/www/html/nlp-viewer",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "yarn.cmd run compile",
+    "pretest": "yarn.cmd run compile",
+    "posttest": "yarn.cmd run lint"
   },
   "eslintConfig": {
     "extends": "react-app"
