--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "^4.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "~3.6.4"
   },
   "peerDependencies": {
     "react": "^16.10.2",
@@ -44,13 +44,7 @@
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "yarn run compile",
-    "pretest": "yarn run compile",
-    "posttest": "yarn run lint"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "fix": "gts fix"
   },
   "browserslist": {
     "production": [
@@ -68,10 +62,6 @@
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!lodash-es/.*)"
     ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "es5"
   },
   "homepage": "."
 }
