--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "jsoneditor": "^9.1.2",
     "lodash-es": "^4.17.15",
     "object-path": "0.11.5",
     "react-dropzone": "^11.0.3",
@@ -23,6 +24,7 @@
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^5.1.2",
     "http-proxy-middleware": "^0.20.0",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
@@ -58,7 +60,10 @@
   "jest": {
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!lodash-es/.*)"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   },
   "prettier": {
     "singleQuote": true,
