Add cross doc project type.  (#151)
* CrossDoc: create a crossdoc project and upload/delete files to the crossdoc project

* change type specification to pass type checks

* CrossDoc: resolved code issues discussed in PR

* CrossDoc: code cleaning

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ simple-backend/db-example-old.sqlite3
 simple-backend/db-old.sqlite3
 .python-version*
 /.idea/
+
+.eslintcache
+stave.iml
+package-lock.json
