Introducing rollup to bundle NLPViewer as a separate module for use in othere applications

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "jsoneditor": "^9.1.2",
     "lodash-es": "^4.17.15",
     "object-path": "0.11.5",
-    "react-dropzone": "^11.0.3",
-    "react-is": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-select": "^3.0.8",
-    "react-modal": "^3.11.2",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
+    "react-dropzone": "^11.0.3",
+    "react-is": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-progressbar": "^15.4.1",
+    "react-router-dom": "^5.2.0",
+    "react-select": "^3.0.8",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -29,7 +29,8 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.5",
     "@types/styled-components": "^5.1.2",
-    "eslint": "^7.13.0",
+    "eslint": "7.13.0",
+
     "gts": "^3.0.2",
     "http-proxy-middleware": "^0.20.0",
     "identity-obj-proxy": "^3.0.0",
