--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 include simple-backend/nlpviewer_backend/db.sqlite3
+recursive-include simple-backend/nlpviewer_backend/sample_sql *
 recursive-include simple-backend/nlpviewer_backend/lib/build *
