--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -30,6 +30,7 @@ jobs:
           node-version: '14'
       - name: Build react.js application and move to package path
         run: |
+          npm install
           npm run build
           mv ./build ./simple-backend/nlpviewer_backend/lib/build
       - name: Copy sql statements to package path
